<resources>
    <string name="app_name">BeaconLocation</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_beacons_scan">BeaconsScan</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_beacons_scan_monitor_adapter">BeaconsScanMonitorAdapter</string>

    <string name="venue">Venue</string>


    <!-- IBEACON -->
    <string name="device_name">Nome</string>
    <string name="proximity_uuid">Proximity UUID</string>
    <string name="battery">Bateria</string>
    <string name="distance">Distância</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="beacon_unique_id">Beacon Id</string>
    <string name="profile">Perfil</string>
    <string name="rssi">Rssi</string>
    <string name="power">Tx Power</string>
    <string name="proximity">Proximidade</string>


    <!-- EDDYSTONE -->
    <string name="namespace">Namespace: %1$s</string>
    <string name="instance">Instance: %1$s</string>
    <string name="url">Url: %1$s</string>
    <string name="tx_power_level">Potência: %1$d dBm</string>
    <string name="temperature">Temperatura: %1$f \u00b0C</string>
    <string name="battery_voltage">Bateria: %1$d mV</string>
    <string name="pdu_count">Pdu count: %1$d</string>
    <string name="time_since_power_up">Time since power up: %1$d seconds</string>
    <string name="telemetry_version">Telemetry version: %1$d</string>

    <string name="title_activity_beacon_details">BeaconDetails</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_eddystone_details">EddystoneDetails</string>
    <string name="title_activity_remover">remover</string>
    <string name="title_activity_remove">remove</string>
    <string name="title_activity_distance_range">DistanceRangeActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_distance_range_eddystone">DistanceRangeEddystoneActivity</string>
    <string name="title_activity_distance_range_ibeacon">DistanceRangeIBeaconActivity</string>


</resources>
